[package]
name = "stayalive-api"
version = "0.1.0"
edition = "2021"
description = "StayAlive API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "stayalive_api"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
serde = "1.0.195"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
dotenv = "0.15"
serde_json = "1.0.111"
http = "1.0.0"
async-trait = "0.1.77"
futures = "0.3.30"
surrealdb = "1.1.1"
validator = { version = "0.16.1", features = ["derive"] }
bcrypt = "0.15.0"
chrono = "0.4.33"
jsonwebtoken = "9.2.0"
surrealdb_migration_engine = "0.1.1"
rust-embed = "^8.2.0"
actix-cors = "0.6.4"
uuid = "1.7.0"

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
